emulator/tests/snapshots/diagnostics__unknown_instruction_with_args.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 89
expression: "check_parse_errors(\"    invalid %a\")"
---
error: unknown instruction 'invalid'
  ┌─ test.S:1:5
  │
1 │     invalid %a
  │     ^ unknown instruction 'invalid'
